Corrections for MA 16 edit.

--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -15,7 +15,7 @@ next: MA_017.html
   <th class='en'>16. The Kālāmas</th>
   <tr>
     <td class='ch' title='t26.1.438b14'>我聞如是： 一時，佛遊伽藍園，與大比丘眾俱。 至羇舍子，住羇舍子村北尸攝惒林中。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of the Kālāma accompanied by a great assembly of monks. He went to the town of *Keśaputra and stayed in a rosewood grove to the north.<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of the Kālāmas accompanied by a great assembly of monks. He went to the town of *Keśaputra and stayed in a rosewood grove to the north.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
 <tr>
   <td class='ch' title='t26.1.438b16'></td>
@@ -139,11 +139,11 @@ next: MA_017.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.439b17'>「復次，伽藍： 『若有所作，必不作惡。 我不念惡。 所以者何？ 自不作惡，苦何由生？』 如是，伽藍，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得第三安隱住處。</td>
-    <td id='p28'>28. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the third safe dwelling place.</td>
+    <td id='p28'>28. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the third safe dwelling place.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.439b21'>「復次，伽藍： 『若有所作，必不作惡。 我不犯世怖與不怖。 常當慈愍一切世間，我心不與眾生共諍，無濁、歡悅。』 如是，伽藍，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得第四安隱住處。</td>
-    <td id='p29'>29. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears or doesn’t fear. I’ll always have compassion for the whole world, and my thoughts won’t be to fight with sentient beings but instead be unsullied and joyous.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the fourth safe dwelling place.</td>
+    <td id='p29'>29. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears or doesn’t fear. I’ll always have compassion for the whole world, and my thoughts won’t be to fight with sentient beings but instead be unsullied and joyous.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the fourth safe dwelling place.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.439b25'>「如是，伽藍，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得四安隱住處。」</td>
@@ -167,11 +167,11 @@ next: MA_017.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.439c8'>「復次，瞿曇： 『若有所作，必不作惡。 我不念惡。 所以者何？ 自不作惡，苦何由生？』 如是，瞿曇，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得第三安隱住處。</td>
-    <td id='p35'>35. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the third safe dwelling place.</td>
+    <td id='p35'>35. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the third safe dwelling place.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.439c11'>「復次，瞿曇： 『若有所作，必不作惡。 我不犯世怖與不怖。 常當慈愍一切世間，我心不與眾生共諍，無濁歡悅。』 如是，瞿曇，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得第四安隱住處。</td>
-    <td id='p36'>36. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears or doesn’t fear. I’ll always have compassion for the whole world, and my thoughts won’t be to fight with sentient beings but instead be unsullied and joyous.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the fourth safe dwelling place.</td>
+    <td id='p36'>36. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears or doesn’t fear. I’ll always have compassion for the whole world, and my thoughts won’t be to fight with sentient beings but instead be unsullied and joyous.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the fourth safe dwelling place.</td>
   </tr>
   <tr>
     <td class='ch' title='t26.1.439c16'>「如是，瞿曇，多聞聖弟子心無結、無怨、無恚、無諍。 是謂得四安隱住處。</td>
@@ -187,7 +187,7 @@ next: MA_017.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.439c22'>伽藍經第六竟 (一千九百八十七字)</td>
-    <td>The End of the <em>Kālāmas Sūtra</em> (1,987 Chinese characters)<sup id="ref7"><a href="#n7">7</a></sup></td>
+    <td>The End of the <em>Kālāmas Sūtra</em> (1,987 Chinese characters)</td>
   </tr>
 </table>
 
@@ -198,16 +198,16 @@ next: MA_017.html
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0438b13" target="_blank">T26.1.438b13-9c22</a>. The only parallel that I have found for this <em>sūtra</em> is <a href="https://suttacentral.net/an3.65" target="_blank">AN 3.65</a>. AN 3.65 has gained a high profile in modern Buddhist discourse because it includes a passage in which the Buddhist seems to advocate for a modern style of critical inquiry. Unfortunately, this intriguing passage does not occur here in the Sarvāstivāda parallel. This passage, however, is found in two other <em>sutta</em>s (<a href="https://suttacentral.net/an3.66" target="_blank">AN 3.66</a> and <a href="https://suttacentral.net/an4.193" target="_blank">4.193</a>) as a standard method of dispelling doubt. The <cite>Ekottarika Āgama</cite> of the Sarvāstivādins is lost today, but it may have contained a similar passage in parallels to these <em>sutta</em>s.</p>
 <p>There is scant little evidence of other versions that may have existed. I’ve only found a passage reference to a <em>Kālāma Sūtra</em> by Asaṅga in his <cite>Yogācārabhūmi</cite> translated by Xuanzang (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T30n1579_p0570a13" target="_blank">T1579.30.570a13</a>). No information is provided about it by Asaṅga, but a Chinese commentator on the passage indicates that “Kālāma” referred to both a country and a people (cf. <a href="https://cbetaonline.dila.edu.tw/zh/A120n1561_p0576b06">A1561.120.576b6</a>). Otherwise, the majority of references to the name Kālāma relate to the non-Buddhist teacher Ārāḍa Kālāma.</p>
-<p>Comparing this sutra with AN 3.65, the main differences are found in the introduction. In this version, there is a standard introduction that depicts the people of *Keśaputra had heard that the Buddha had arrived and decide to go visit him. Once they do, they ask him how to resolve their doubts about various religious teachers who contradict and criticize each other. Here, the Buddha tells them that their doubts are because they lack “pure knowledge” (presumably, accurate knowledge) about the afterlife and what constitutes good and bad conduct. This brief statement serves as the equivalent of the Buddha’s list of sources of information that cannot be fully trusted.</p>
+<p>Comparing this <em>sūtra</em> with AN 3.65, the main differences are found in the introduction. In this version, there is a standard introduction that depicts the people of *Keśaputra had heard that the Buddha had arrived and decide to go visit him. Once they do, they ask him how to resolve their doubts about various religious teachers who contradict and criticize each other. Here, the Buddha tells them that their doubts are because they lack “pure knowledge” (presumably, accurate knowledge) about the afterlife and what constitutes good and bad conduct. This brief statement serves as the equivalent of the Buddha’s list of sources of information that cannot be fully trusted.</p>
 <p>The remainder of the two <em>sūtra</em>s follow the same basic outline with differences in details. AN 3.65, however, takes up a number of positive qualities juxtaposed against the three roots of unskillfulness, while this <em>sūtra</em> moves on to a standard statement of the ten good deeds. After this, the Buddha teaches the Kālāmas about the four immeasurables and four peaceful dwellings. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p><em>country of the Kālāmas</em>. C. <span class="ch">伽藍</span> (EMC k’ie-lam = Pr. <em>kalām[a]</em>?), P/S. Kālāma. The Taisho reads <span class="ch">園</span> (“park”), which appears to be an error. I’ve adopted an alternate reading of <span class="ch">國</span> (“country”).</p>
 <p><em>*Keśaputra</em>. C. <span class="ch">羇舍子</span> (EMC kɪĕ-ʃɪă + <em>putra</em> = Pr. <em>keśaputra</em>?), P. <em>kesamutta</em>. The Chinese is a partial transliteration (<span class="ch">子</span> typically translates P. <em>putta</em>, S. <em>putra</em>). I’ve not located a S. attestation for this place name, so I’ve tentatively reconstructed it according to the the Chinese transliteration.</p>
-<p><em>rosewood grove.</em> C. 尸攝惒林 (EMC. ʃɪi-ʃɪɛp-ɦua + “forest” = G. <em>śiśapavana</em>), P. <em>siṃsapā</em>, S. <em>śiṃśapā</em>. AN 3.65 does not mention this grove. An oddity about MA is that in all five sutras that mention rosewood groves call them “northern” groves. It seems quite a coincidence that all of these grove are “to the north” or a village or mountain. I wonder if north was not part of the tree’s name, i.e. “the Northern Rosewood Tree.” But when the Kālāmas go to the grove, they walk north to reach it. It seem to simply be a repeated feature of MĀ’s introductions. In any case, this was the classical name for the Indian rosewood tree (<em><a href="https://en.wikipedia.org/wiki/Dalbergia_sissoo" target="_blank">Dalbergia sissoo</a></em>), which today is called the <em>shisham</em> tree in India. [<a href="#ref2">back</a>]</p></li>
+<p><em>rosewood grove.</em> C. 尸攝惒林 (EMC. ʃɪi-ʃɪɛp-ɦua + “forest” = G. <em>śiśapavana</em>), P. <em>siṃsapā</em>, S. <em>śiṃśapā</em>. AN 3.65 does not mention this grove. An oddity about MĀ is that in all five <em>sūtra</em>s that mention rosewood groves call them “northern” groves. It seems quite a coincidence that all of these groves are “to the north” of a village or mountain. I wonder if north was not part of the tree’s name, i.e. “the Northern Rosewood Tree.” But when the Kālāmas go to the grove, they walk north to reach it. It seems to simply be a repeated feature of MĀ’s introductions. In any case, this was the classical name for the Indian rosewood tree (<em><a href="https://en.wikipedia.org/wiki/Dalbergia_sissoo" target="_blank">Dalbergia sissoo</a></em>), which today is called the <em>shisham</em> tree in India. [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p>This introduction is very similar to the standard introductions explaining how townsfolk come to ask the Buddha questions in the <cite>Dīgha Nikāya</cite>, <cite>Aṅguttara Nikāya</cite>, and <cite>Dīrgha Āgama</cite>. It occurs frequently in the <cite>Majjhima Nikāya</cite> but only a few times here in the <cite>Madhyama Āgama</cite>. It seems to be a feature of narrative development in EBTs and might indicate later editing or composition given how long and standardized it became. [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p><em>You’ll become hesitant … which deeds are blameworthy and which are blameless</em>. This same answer is given to Pāṭaliya in MĀ 20. There’s also a similar passage in MĀ 19 where the Buddha recounts a conversation with a Jain in which he tells the non-Buddhist that he lacks pure knowledge regarding the nature of self. The expression seems to mean knowledge pure of error. [<a href="#ref4">back</a>]</p></li>
-<li id="n5"><p><em>causes that are pre-existent</em>. C. <span class="ch">因習本有</span>. I suspect that <span class="ch">因習</span> translates a verb equivalent to P. <em>uppajjati</em> (“to arise, come into being”), which is found in the P. parallel. This is also supported vaguely by an alternate reading in MĀ 111 and changes <span class="ch">因習</span> to <span class="ch">因集</span>, suggesting that the intended reading was similar to S. <em>samudaya</em>. Chinese Buddhists vasicillated between <span class="ch">集</span> and <span class="ch">習</span> as translations of <em>samudaya</em> in the Āgamas. <span class="ch">本有</span> would normally be read as “original” or “past existence.” This would make the expression <span class="ch">三因習本有</span> mean “three causes of past existence” or perhaps “three pre-existing causes.” As we shall see, this refers to the three unskillful roots, so I’ve opted for the later rendering. [<a href="#ref5">back</a>]</p></li>
-<li id="n6"><p>This presentation of the path of ten good deeds is identical to the first seven precepts found in the longer list of precepts followed by an ascetic (e.g., in <a href="MA_80.html#the-twenty-renunciations" target="_blank">MĀ 80</a>). To these seven precepts, three more are added to cover mental good deeds of not longing for possessions, not being hateful, and having right view. While the Buddha is speaking to laypeople here, the precepts are those of a monk. Thus, they are stricter than would have been expected of laypeople. [<a href="#ref6">back</a>]</p></li>
-<li id="n7"><p>This final count of characters is very close. I count a total 1,988 characters in the Taisho edition. Looking at the variant readings, I don’t see any obvious cases that would add or subject the characters needed to reach 1,987. Perhaps an extra character has slipped in without causing discrepancies between the official canonical editions. [<a href="#ref7">back</a>]</p></li>
+<li id="n5"><p><em>pre-existing causes</em>. C. <span class="ch">因習本有</span>. I suspect that <span class="ch">因習</span> translates a verb equivalent to P. <em>uppajjati</em> (“to arise, come into being”), which is found in the P. parallel. This is also supported vaguely by an alternate reading in MĀ 111 that changes <span class="ch">因習</span> to <span class="ch">因集</span>, suggesting that the intended reading was similar to S. <em>samudaya</em>. Chinese Buddhists vacillated between <span class="ch">集</span> and <span class="ch">習</span> as translations of <em>samudaya</em> in the Āgamas. <span class="ch">本有</span> would normally be read as “original” or “past existence.” This would make the expression <span class="ch">三因習本有</span> mean “three causes of past existence” or perhaps “three pre-existing causes.” As we shall see, this refers to the three unskillful roots, so I’ve opted for the latter rendering. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p>This presentation of the path of ten good deeds is identical to the first seven precepts found in the longer list of precepts followed by an ascetic (e.g., in <a href="MA_080.html#the-twenty-renunciations" target="_blank">MĀ 80</a>). To these seven precepts, three more are added to cover mental good deeds of not longing for possessions, not being hateful, and having right view. While the Buddha is speaking to laypeople here, the precepts are those of a monk. Thus, they are stricter than would have been expected of laypeople. [<a href="#ref6">back</a>]</p></li>
+<li id="n7"><p>This final count of characters is very close. I count a total of 1,988 characters in the Taisho edition. Looking at the variant readings, I don’t see any obvious cases that would subtract the characters needed to reach 1,987. Perhaps an extra character has slipped in without causing discrepancies between the official canonical editions. [<a href="#ref7">back</a>]</p></li>
 </ol>
 <hr/>
 
