--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -22,7 +22,7 @@ next: MA_017.html
   <td class='subheading'>The Doubt of the Kālāmas</td>
 </tr>
   <tr>
-    <td class='ch' title='t26.1.438b16'>爾時，羇舍子伽藍人聞: 沙門瞿曇釋種子捨釋宗族、出家、學道，遊伽藍園與大比丘眾俱，來至此羇舍子。 住羇舍子村北尸攝惒林中。</td>
+    <td class='ch' title='t26.1.438b16'>爾時，羇舍子伽藍人聞: 「沙門瞿曇釋種子捨釋宗族、出家、學道，遊伽藍園與大比丘眾俱，來至此羇舍子。 住羇舍子村北尸攝惒林中。</td>
     <td id='p2'>2. It was then that the Kālāma people of *Keśaputra heard, “The ascetic Gautama from the Śākya clan who renounced the Śākya dynasty to leave home and train on the path has traveled to the country of the Kālāmas and arrived at *Keśaputra with a great assembly of monks. They are staying in the rosewood grove north of the town.</td>
   </tr>
   <tr>
@@ -187,7 +187,7 @@ next: MA_017.html
   </tr>
   <tr>
     <td class='ch' title='t26.1.439c22'>伽藍經第六竟 (一千九百八十七字)</td>
-    <td>The End of the <em>Kālāmas Sūtra</em> (1,987 Chinese characters)</td>
+    <td>The End of the <em>Kālāmas Sūtra</em> (1,987 Chinese characters)<sup id="ref7"><a href="#n7">7</a></sup></td>
   </tr>
 </table>
 
